Fix: Resolve database URL conversion and schema initialization for Render

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,8 +8,9 @@
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-# Use validate mode in production (don't auto-modify schema)
-spring.jpa.hibernate.ddl-auto=validate
+# Use update mode in production to create/update schema
+# After initial deployment, should change this to 'validate' for safety
+spring.jpa.hibernate.ddl-auto=update
 
 # File upload directory - cloud storage or container path
 file.uploaddir=${FILE_UPLOAD_DIR:/app/uploads}
