--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,10 @@ server.port=${PORT:8080}
 # FRONTEND URL (for CORS and email links)
 # ============================================
 app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+
+# ============================================
+# ACTUATOR CONFIGURATION (Health checks)
+# ============================================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.defaults.enabled=true
