--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,3 +71,6 @@ app.frontend.url=${FRONTEND_URL:http://localhost:5173}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 management.health.defaults.enabled=true
+# Disable mail health check to prevent deployment timeout
+# Email functionality will still work, but won't block health checks
+management.health.mail.enabled=false
