preparing for local server deployment

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,27 +3,41 @@
 # ============================================
 # Activated with: -Dspring.profiles.active=dev or SPRING_PROFILES_ACTIVE=dev
 
+# Local Server port for dev
+server.port=8080
+
 # Show SQL queries in console (useful for debugging)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Use update mode for development (auto-create/update tables)
-spring.jpa.hibernate.ddl-auto=update
+# Local Fastapi and frontend for dev
+FASTAPI_BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
 
-# Development CORS - allow localhost
-# (Override in SecurityConfig if needed)
+#the rest of the variables should be defined in intellij run env
 
-# File upload directory - local for development
-file.uploaddir=${FILE_UPLOAD_DIR:C:/Users/Lenovo/Downloads/Afriq-AI-Upload}
+# Local file upload directory (fill it)
+#FILE_UPLOAD_DIR=
 
-# FastAPI - local development
-fastapi.base-url=${FASTAPI_BASE_URL:http://localhost:8000}
+# Local Database (fill it)
+#SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/database_name
+#SPRING_DATASOURCE_USERNAME=postgres
+#SPRING_DATASOURCE_PASSWORD=
 
-# Frontend - local development
-app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+# JWT config (fill it)
+#JWT_SECRET_KEY=
+#JWT_ACCESS_TOKEN_EXPIRATION=
+#JWT_REFRESH_TOKEN_EXPIRATION=
 
-# Logging
-logging.level.com.pfa.pfaproject=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
+# Email config (fill it)
+#SMTP_HOST=
+#SMTP_PORT=
+#SMTP_USERNAME=
+#SMTP_PASSWORD=
 
+# Super admin config (fill it)
+#SUPER_ADMIN_FIRSTNAME=
+#SUPER_ADMIN_LASTNAME=
+#SUPER_ADMIN_USERNAME=
+#SUPER_ADMIN_EMAIL=
+#SUPER_ADMIN_PASSWORD=
