--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,64 +3,66 @@ spring.application.name=Afriq'AI Ranking
 # ============================================
 # DATABASE CONFIGURATION
 # ============================================
-# Use DATABASE_URL environment variable (Render/Cloud style) or fallback to individual vars
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/afriq_ai_ranking}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ============================================
 # JPA + HIBERNATE CONFIGURATION
 # ============================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ============================================
 # JWT CONFIGURATION
 # ============================================
 jwt.secretkey=${JWT_SECRET_KEY}
-jwt.access-token-expiration-time=${JWT_ACCESS_TOKEN_EXPIRATION:3600000}
-jwt.refresh-token-expiration-time=${JWT_REFRESH_TOKEN_EXPIRATION:86400000}
+jwt.access-token-expiration-time=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token-expiration-time=${JWT_REFRESH_TOKEN_EXPIRATION}
 
 # ============================================
 # EMAIL CONFIGURATION (SMTP)
 # ============================================
-spring.mail.host=${SMTP_HOST:smtp.gmail.com}
-spring.mail.port=${SMTP_PORT:587}
+spring.mail.host=${SMTP_HOST}
+spring.mail.port=${SMTP_PORT}
 spring.mail.username=${SMTP_USERNAME}
 spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=${SMTP_HOST:smtp.gmail.com}
 
 # ============================================
 # FASTAPI SERVICE CONFIGURATION
 # ============================================
-fastapi.base-url=${FASTAPI_BASE_URL:http://localhost:8000}
+fastapi.base-url=${FASTAPI_BASE_URL}
 
 # ============================================
 # FILE UPLOAD CONFIGURATION
 # ============================================
-file.uploaddir=${FILE_UPLOAD_DIR:./uploads}
+file.uploaddir=${FILE_UPLOAD_DIR}
 
 # ============================================
 # SUPER ADMIN DEFAULT CONFIGURATION
 # ============================================
-app.superadmin.firstname=${SUPER_ADMIN_FIRSTNAME:superadmin}
-app.superadmin.lastname=${SUPER_ADMIN_LASTNAME:superadmin}
-app.superadmin.username=${SUPER_ADMIN_USERNAME:superadmin}
-app.superadmin.email=${SUPER_ADMIN_EMAIL:superadmin@example.com}
+app.superadmin.firstname=${SUPER_ADMIN_FIRSTNAME}
+app.superadmin.lastname=${SUPER_ADMIN_LASTNAME}
+app.superadmin.username=${SUPER_ADMIN_USERNAME}
+app.superadmin.email=${SUPER_ADMIN_EMAIL}
 app.superadmin.password=${SUPER_ADMIN_PASSWORD}
-
-# ============================================
-# SERVER CONFIGURATION
-# ============================================
-server.port=${PORT:8080}
 
 # ============================================
 # FRONTEND URL (for CORS and email links)
 # ============================================
-app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+app.frontend.url=${FRONTEND_URL}
+
+# ============================================
+# ACTUATOR CONFIGURATION (Health checks)
+# ============================================
+# Expose health and info endpoints over HTTP
+management.endpoints.web.exposure.include=health,info
+# Show full details in /actuator/health responses
+management.endpoint.health.show-details=always
+# Disable email health check to avoid false DOWN status
+# Disable mail health check to prevent deployment timeout
+# Email functionality will still work, but won't block health checks
+management.health.mail.enabled=false
